--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -1,1 +1,1 @@
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeLNFb3PV4vlBDjQSJXW-gFptDL6tkrc2TSa08YR0JVJlMONw/viewform?embedded=true" width="400" height="2000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeLNFb3PV4vlBDjQSJXW-gFptDL6tkrc2TSa08YR0JVJlMONw/viewform?embedded=true" width="100%" height="2000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
