Add direct link to the registration form

--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -1,1 +1,6 @@
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeLNFb3PV4vlBDjQSJXW-gFptDL6tkrc2TSa08YR0JVJlMONw/viewform?embedded=true" width="100%" height="2000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<div>
+    <p>
+        If the embedded form does not load on your browser, you can open it directly: <a href="https://docs.google.com/forms/d/e/1FAIpQLSeLNFb3PV4vlBDjQSJXW-gFptDL6tkrc2TSa08YR0JVJlMONw/viewform" target="_blank" style="color: black">click here</a>
+    </p>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeLNFb3PV4vlBDjQSJXW-gFptDL6tkrc2TSa08YR0JVJlMONw/viewform?embedded=true" width="100%" height="2000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+</div>
